--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "devDependencies": {
-    "parcel-bundler": "^1.12.3",
-    "typescript": "^3.5.3"
-  },
   "name": "typescript-web-framework",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "json-server": "^0.15.1",
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.5.3"
+  },
   "scripts": {
-    "dev": "parcel index.html",
+    "dev:parcel": "parcel index.html",
+    "dev:db": "json-server -w db.json",
+    "dev": "concurrently npm:dev:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
